--- a/app/src/main/res/layout/bill_list_view.xml
+++ b/app/src/main/res/layout/bill_list_view.xml
@@ -1,37 +1,35 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#abcdef">
+    android:background="#C1CFB1">
 
     <TextView
         android:id="@+id/item1"
         android:padding="5dp"
-        android:paddingStart="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="item: "/>
+        android:text="@string/item"/>
     <TextView
         android:id="@+id/item"
         android:padding="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/item1"
-        android:text="0"/>
+        android:text="@string/_0"/>
     <TextView
         android:id="@+id/calculation"
         android:layout_toEndOf="@id/item"
         android:padding="5dp"
-        android:paddingStart="10dp"
         android:layout_width="180dp"
         android:gravity="center"
         android:layout_height="wrap_content"
-        android:text="1500*2" />
+        android:text="@string/_0_00_x_0" />
     <TextView
         android:id="@+id/total"
         android:layout_toEndOf="@id/calculation"
         android:padding="5dp"
-        android:paddingStart="10dp"
-        android:layout_width="120dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:text="3000.00"/>
+        android:text="@string/_0_00"
+        android:textAlignment="viewEnd"/>
 </RelativeLayout>
