--- a/app/src/main/res/layout/final_bill_list_view.xml
+++ b/app/src/main/res/layout/final_bill_list_view.xml
@@ -1,6 +1,38 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#C1CFB1">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/item1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:text="@string/item" />
+    <TextView
+        android:id="@+id/item"
+        android:padding="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/item1"
+        android:text="@string/_0"/>
+
+    <TextView
+        android:id="@+id/calculation"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/item"
+        android:gravity="center"
+        android:padding="5dp"
+        android:text="@string/_0_00_x_0" />
+
+    <TextView
+        android:id="@+id/total"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/calculation"
+        android:padding="5dp"
+        android:text="@string/_0_00"
+        android:textAlignment="viewEnd" />
+
+</RelativeLayout>
